<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dedeff"
    tools:context=".Presentation.AddRecipeActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#25F783AF"
        android:orientation="vertical">


            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:fontFamily="@font/baloo2_semibold"
                android:gravity="center"
                android:text="@string/add_recipe"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="20dp" />

        <EditText
            android:id="@+id/recipeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:hint="@string/add_recipe_name"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            android:textSize="30sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo2_medium"
            android:text="@string/add_category"
            android:layout_marginTop="10dp"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/recipeCategory"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/btn_dropdown"
            android:contentDescription="@string/add_category"
            android:fontFamily="sans-serif-black"
            android:spinnerMode="dropdown"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo2_medium"
            android:text="@string/add_level"
            android:layout_marginTop="10dp"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/recipeLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/btn_dropdown"
            android:contentDescription="@string/add_level"
            android:fontFamily="sans-serif-black"
            android:spinnerMode="dropdown"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/prep_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:hint="@string/add_prepT"
            android:inputType="number"
            android:textColorHint="#757575"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/cook_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:hint="@string/add_cookingT"
            android:inputType="number"
            android:textColorHint="#757575"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/servings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:hint="@string/add_servings"
            android:inputType="number"
            android:textColorHint="#757575"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:hint="@string/add_ingredients"
            android:inputType="textMultiLine"
            android:textColorHint="#757575"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/keyIng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="15"
            android:fontFamily="sans-serif-black"
            android:hint="@string/add_keyIng"
            android:inputType="textMultiLine"
            android:textColorHint="#757575"
            android:textSize="30sp" />



            <EditText
                android:id="@+id/instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:gravity="start|top"
                android:hint="@string/add_instructions"
                android:inputType="textMultiLine"
                android:maxLines="20"
                android:minLines="1"
                android:textColorHint="#757575"
                android:textSize="30sp" />


        <Button
            android:id="@+id/submitRecipe"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_blue_dark"
            android:fontFamily="@font/baloo2_semibold"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
