<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#25F783AF"
    tools:context=".Presentation.MainActivity">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="10dp"
        tools:ignore="UseAppTint">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/searchText"

            android:hint="@string/search_by"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            >

            <AutoCompleteTextView
                android:id="@+id/auto_complete_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="SpeakableTextPresentCheck">

            </AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/searchText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/search_icon"
            android:background="@drawable/search_bar"
            android:fontFamily="@font/baloo2_semibold"
            android:hint="@string/search_message"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#807D7D"
            android:textSize="25sp" />


        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="showSearchResult"
            android:paddingRight="20dp"
            android:src="@drawable/search_icon"
            android:tint="#807D7D"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    </RelativeLayout>



    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/baloo2_semibold"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/layout1">

    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        android:layout_marginTop="190dp"
        android:background="@drawable/main_backdrop"
        android:id="@+id/layout2" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="200dp"
            tools:ignore="MissingConstraints" >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="30dp" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="75dp"
            android:layout_height="74dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/round_button"
            android:clickable="true"
            android:focusable="true"
            android:onClick="showAddRecipe"
            android:scaleType="fitCenter"
            android:src="@drawable/plus_icon"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck,UsingOnClickInXml" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>