...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#25F783AF"
    tools:context=".Presentation.RecipeCommentActivity">

    <TextView
        android:id="@+id/recipe"
        android:layout_width="602dp"
        android:layout_height="79dp"
        android:fontFamily="@font/baloo2_semibold"
        android:gravity="center"
        android:text="@string/recipe_name"
        android:textColor="#000000"
...
